<resources>
    <string name="app_name">AppPhorm</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">Accueil</string>
    <string name="app_logo">App logo</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="act_main_login_btn">Se connecter</string>
    <string name="act_main_suscribe_btn">Créer un compte</string>
    <string name="form_empty">Veuillez remplir tous les champs svp.</string>
    <string name="title_activity_suscribe">SuscribeActivity</string>
    <string name="subscribe_title">Créer un compte</string>
    <string name="act_subscribe_form_name">Nom</string>
    <string name="form_password">Mot de passe</string>
    <string name="act_subscribe_button">Continuer</string>
    <string name="form_email">Email</string>
    <string name="act_subscribe_form_pname">Prénom</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="act_account_name">Nom</string>
    <string name="act_account_pname">Prénom</string>
    <string name="act_account_birthday">Date de naissance</string>
    <string name="act_account_email">Email</string>
    <string name="act_account_button">Modifier</string>
    <string name="act_account_title">Liste des catégories</string>
    <string name="act_main_catalog_btn">Consulter le catalogue</string>
    <string name="act_login_title">Se connecter</string>
    <string name="act_login_button">Continuer</string>
    <string name="act_login_wrong_email_or_password">Email ou mot de passe invalide. Veuillez réessayer svp.</string>
    <string name="act_subscribe_birthday">Date de naissance</string>
    <string name="dialog_exit_msg">Quitter l\'application ?</string>
    <string name="dialog_exit_title">Quitter</string>
    <string name="yes">Oui</string>
    <string name="cancel">Annuler</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="title_activity_user_infos">UserInfosActivity</string>
    <string name="act_user_info_btn">Valider les changements</string>
    <string name="action_logout">Se déconnecter</string>
    <string name="action_change_user_info">Modifier les identifiants</string>
    <string name="form_new_password">Nouveau mot de passe</string>
    <string name="act_user_info_title">Modifier vos informations</string>
    <string name="error_unreachable_network">Pas d\'accès réseau. Veuillez vérifier votre connection internet svp.</string>
    <string name="title_activity_account_activity2">AccountActivity2</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="act_category_title">Liste des sous catégories</string>
    <string name="title_activity_formation">FormationActivity</string>
    <string name="action_account">Mon compte</string>
    <string name="act_formation_title">Liste des formations</string>
    <string name="title_activity_main_formation">MainFormationActivity</string>
    <string name="act_main_formation_title">Nom de la formation</string>
    <string name="act_main_formation_desc_btn">En savoir plus</string>
    <string name="act_main_formation_video_btn">Vidéos</string>
    <string name="act_main_formation_subtitle">Sous titre de la formation</string>
    <string name="act_main_formation_price">Prix</string>
    <string name="act_main_formation_time">Durée de la formation</string>
    <string name="action_quit">Quitter</string>
    <string name="dialog_logout_msg">Se déconnecter ?</string>
    <string name="dialog_logout_title">Déconnexion</string>
    <string name="title_activity_descriptif">DescriptifActivity</string>
    <string name="act_descriptif_title">Descriptif</string>
    <string name="action_main">Accueil</string>
    <string name="action_login">Se connecter</string>
    <string name="action_subscribe">S\'inscrire</string>
    <string name="action_catalog">Catalogue</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="act_subscribe_title">Nouveau compte</string>
    <string name="act_video_title">Liste des vidéos</string>
    <string name="title_activity_list_video">ListVideoActivity</string>
</resources>
