<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/all"
    tools:context="com.ecolem_test.appphorm.MainFormationActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="125dp"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:id="@+id/mainLeft"
        android:background="@color/grey"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/act_account_name"
            android:id="@+id/act_account_name"
            android:layout_marginTop="35dp"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/act_account_name"
            android:text="@string/act_account_pname"
            android:layout_marginTop="15dp"
            android:id="@+id/act_account_pname" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/act_account_pname"
            android:text="@string/act_account_birthday"
            android:layout_marginTop="15dp"
            android:id="@+id/act_account_birthday" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/act_account_birthday"
            android:text="@string/act_account_email"
            android:layout_marginTop="15dp"
            android:id="@+id/act_account_email" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act_account_button"
            android:id="@+id/act_account_button"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:onClick="changeUserInfo"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_toRightOf="@+id/mainLeft"
        android:layout_toEndOf="@+id/mainLeft">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:id="@+id/mainRight">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act_main_formation_subtitle"
                android:id="@+id/act_main_formation_subtitle"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/act_main_formation_subtitle"
                android:layout_centerHorizontal="true"
                android:id="@+id/act_main_formation_finished"
                android:layout_marginTop="15dp"
                android:textColor="@color/green"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act_main_formation_time"
                android:id="@+id/act_main_formation_duration"
                android:layout_below="@+id/act_main_formation_finished"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp" />

            <com.android.volley.toolbox.NetworkImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/act_main_formation_image"
                android:layout_below="@+id/act_main_formation_duration"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act_main_formation_price"
                android:id="@+id/act_main_formation_price"
                android:layout_below="@+id/act_main_formation_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp" />

            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/act_main_formation_desc_btn"
                android:text="@string/act_main_formation_desc_btn"
                android:layout_marginTop="30dp"
                android:layout_below="@+id/act_main_formation_price"
                android:layout_centerHorizontal="true"
                android:nestedScrollingEnabled="false"
                android:onClick="onClickDescriptif"/>

            <Button
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/act_main_formation_video_btn"
                android:text="@string/act_main_formation_video_btn"
                android:layout_below="@+id/act_main_formation_desc_btn"
                android:layout_centerHorizontal="true"
                android:onClick="onClickVideo"/>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
