<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/all"
    tools:context="com.ecolem_test.appphorm.UserInfosActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="125dp"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:id="@+id/mainLeft"
        android:background="@color/grey"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/act_account_name"
            android:id="@+id/act_account_name"
            android:layout_marginTop="35dp"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/act_account_name"
            android:text="@string/act_account_pname"
            android:layout_marginTop="15dp"
            android:id="@+id/act_account_pname" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/act_account_pname"
            android:text="@string/act_account_birthday"
            android:layout_marginTop="15dp"
            android:id="@+id/act_account_birthday" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/act_account_birthday"
            android:text="@string/act_account_email"
            android:layout_marginTop="15dp"
            android:id="@+id/act_account_email" />
    </LinearLayout>

    <GridLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/mainLeft"
        android:layout_toRightOf="@+id/mainLeft"
        android:layout_marginTop="50dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <EditText
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:id="@+id/act_user_info_name"
            android:hint="@string/act_subscribe_form_name"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <EditText
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:id="@+id/act_user_info_pname"
            android:layout_below="@+id/act_user_info_name"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/act_subscribe_form_pname"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_marginTop="15dp" />

        <EditText
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:layout_below="@+id/act_user_info_pname"
            android:id="@+id/act_user_info_email"
            android:layout_row="2"
            android:layout_column="0"
            android:hint="@string/form_email"
            android:layout_marginTop="15dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/act_user_info_birthday"
            android:layout_row="3"
            android:layout_column="0"
            android:hint="@string/act_subscribe_birthday"
            android:layout_marginTop="15dp" />

        <EditText
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/act_user_info_password"
            android:hint="@string/form_new_password"
            android:layout_below="@+id/act_subscribe_email"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/act_subscribe_email"
            android:layout_alignEnd="@+id/act_subscribe_email"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_marginTop="15dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:id="@+id/togglePasswordVisibility"
            android:button="@drawable/checkbox_show_password_style"
            android:background="@null"
            android:onClick="toggleVisibility"
            android:paddingRight="10dp"
            android:paddingLeft="0dp"
            android:layout_gravity="right"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_marginTop="15dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act_user_info_btn"
            android:id="@+id/act_subscribe_button"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:onClick="onClickChange"
            android:layout_marginTop="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/log"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/act_subscribe_button"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_row="6"
            android:layout_column="0"
            android:layout_marginTop="15dp" />

    </GridLayout>

</RelativeLayout>
