<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/all"
    tools:context="com.ecolem_test.appphorm.AccountActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="125dp"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:id="@+id/mainLeft"
        android:background="@color/grey"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/act_account_name"
            android:id="@+id/act_account_name"
            android:layout_marginTop="35dp"
            android:textAlignment="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/act_account_name"
            android:text="@string/act_account_pname"
            android:layout_marginTop="15dp"
            android:id="@+id/act_account_pname" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/act_account_pname"
            android:text="@string/act_account_birthday"
            android:layout_marginTop="15dp"
            android:id="@+id/act_account_birthday" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/act_account_birthday"
            android:text="@string/act_account_email"
            android:layout_marginTop="15dp"
            android:id="@+id/act_account_email" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act_account_button"
            android:id="@+id/act_account_button"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:onClick="changeUserInfo"/>
    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/act_account_catalog"
        android:layout_toRightOf="@+id/mainLeft"
        android:layout_toEndOf="@+id/mainLeft"
        android:layout_alignTop="@+id/mainLeft" />


</RelativeLayout>
